--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,12 @@ variables:
 steps:
 - script: make
   displayName: 'make $(buildConfiguration)'
+- task: CopyFiles@2
+  inputs:
+    sourceFolder: '$(Build.SourcesDirectory)'
+    contents: '**/$(BuildConfiguration)/**/?(*.js|*.data)'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    artifactName: drop
