--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,3 @@
-# ASP.NET Core
-# Build and test ASP.NET Core projects targeting .NET Core.
-# Add steps that run tests, create a NuGet package, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
 - master
@@ -14,4 +10,22 @@ variables:
 
 steps:
 - script: make
-  displayName: 'make $(buildConfiguration)'
+  displayName: 'Run make to generate the files.'
+# - task: CopyFiles@2
+#   inputs:
+#     sourceFolder: 'dist'
+#     contents: '**/?(*.js|*.data)'
+#     TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: 'dist'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/zoneinfo-$(Build.BuildId).zip'
+    replaceExistingArchive: true
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/zoneinfo-$(Build.BuildId).zip'
+    artifactName: zoneinfo_data
